# grpc-doodles

./: Cargo.toml  build.rs
proto/: foo.proto
src/: main.rs
