[package]
name = "test_grpc_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
tokio = {version="1.32", features=["full"]}
tokio-stream = { version = "0.1", features=["full"]}
prost = "0.11.0"
tonic = "0.8.0"

[build-dependencies]
tonic-build = "0.8.0"
